# Final-DevAI

./: README.md  main.py  pyproject.toml  quiz_app.db
